cmake_minimum_required(VERSION 3.24)
project(TIL)

set(CMAKE_CXX_STANDARD 14)

add_executable(TIL
        AlgoRev/PossibleCombinations.cpp
        Baekjoon/Basic/1000.cpp
        Baekjoon/Basic/1001.cpp
        Baekjoon/GeometryBasics/1004.cpp
        Baekjoon/DynamicProgramming/1005.cpp
        Baekjoon/DynamicProgramming/1010.cpp
        Baekjoon/BruteForce/1018.cpp
        Baekjoon/Div&Mult/1037.cpp
        Baekjoon/Array/10798.cpp
        Baekjoon/Recursion/10807.cpp
        Baekjoon/Basic/10810.cpp
        Baekjoon/Basic/10811.cpp
        Baekjoon/Basic/10812.cpp
        Baekjoon/Basic/10813.cpp
        Baekjoon/Sorting/10814.cpp
        Baekjoon/MapNPair/10815.cpp
        Baekjoon/BinarySearch/10815_error.cpp
        Baekjoon/MapNPair/10816.cpp
        Baekjoon/Basic/10988.cpp
        Baekjoon/Sorting/10989.cpp
        Baekjoon/Greedy/11047.cpp
        Baekjoon/Arithmetics/11050.c
        Baekjoon/Arithmetics/11382.cpp
        Baekjoon/MapNPair/11478.cpp
        Baekjoon/Sorting/11651.cpp
        Baekjoon/Div&Mult/11653.cpp
        Baekjoon/Basic/11654.cpp
        Baekjoon/Basic/11654_1.cpp
        Baekjoon/Accumulation/11659.cpp
        Baekjoon/Accumulation/11659_fast.cpp
        Baekjoon/Recursion/11729.cpp
        Baekjoon/Sorting/1181.cpp
        Baekjoon/MapNPair/1269.cpp
        Baekjoon/Basic/1316.cpp
        Baekjoon/Div&Mult/13241.cpp
        Baekjoon/GeometryBasics/1358.cpp
        Baekjoon/Sorting/1427.cpp
        Baekjoon/MapNPair/14425.cpp
        Baekjoon/BackTracking/14888.cpp
        Baekjoon/BackTracking/14888_intuitive_dfs.cpp
        Baekjoon/BackTracking/14889.cpp
        Baekjoon/SegmentTree/14899.cpp
        Baekjoon/BackTracking/15649.cpp
        Baekjoon/BackTracking/15650.cpp
        Baekjoon/BackTracking/15651.cpp
        Baekjoon/BackTracking/15652.cpp
        Baekjoon/MapNPair/1620.cpp
        Baekjoon/Arithmetics/1676.cpp
        Baekjoon/Arithmetics/1712.cpp
        Baekjoon/Div&Mult/1735.cpp
        Baekjoon/Recursion/17478.cc
        Baekjoon/MapNPair/1764.cpp
        Baekjoon/Div&Mult/1929.cpp
        Baekjoon/Div&Mult/1934.cpp
        Baekjoon/Arithmetics/2004.cpp
        Baekjoon/Sorting/2108.cpp
        Baekjoon/BruteForce/2231.cpp
        Baekjoon/Arithmetics/2292.cpp
        Baekjoon/Recursion/24060.c
        Baekjoon/TimeComplexity/24262.cpp
        Baekjoon/TimeComplexity/24263.cpp
        Baekjoon/TimeComplexity/24264.cpp
        Baekjoon/TimeComplexity/24265.cpp
        Baekjoon/TimeComplexity/24266.cpp
        Baekjoon/TimeComplexity/24267.cpp
        Baekjoon/TimeComplexity/24313.cpp
        Baekjoon/DynamicProgramming/24416.cpp
        Baekjoon/Basic/2444.cpp
        Baekjoon/Recursion/2447.cpp
        Baekjoon/GeometryBasics/2477.cpp
        Baekjoon/Div&Mult/2485.cpp
        Baekjoon/Div&Mult/2501.cpp
        Baekjoon/Basic/25083.cc
        Baekjoon/Basic/25206.cpp
        Baekjoon/Basic/25304.cpp
        Baekjoon/Sorting/25305.cpp
        Baekjoon/Basic/25314.cpp
        Baekjoon/Recursion/25501.c
        Baekjoon/Accumulation/2559.c
        Baekjoon/Array/2563.cpp
        Baekjoon/Array/2566.cpp
        Baekjoon/Sorting/2587.cpp
        Baekjoon/Div&Mult/2609.cpp
        Baekjoon/Array/2738.cpp
        Baekjoon/Basic/2743.cpp
        Baekjoon/DynamicProgramming/2775.cpp
        Baekjoon/BruteForce/2798.cpp
        Baekjoon/Arithmetics/2869.cpp
        Baekjoon/Basic/2941.cpp
        Baekjoon/Div&Mult/2981_ot.cpp
        Baekjoon/Basic/3003.cpp
        Baekjoon/Div&Mult/3036.cpp
        Baekjoon/Div&Mult/4134.cpp
        Baekjoon/GeometryBasics/4153.cpp
        Baekjoon/BruteForce/4673.cpp
        Baekjoon/Div&Mult/4948.cpp
        Baekjoon/Div&Mult/5086.cc
        Baekjoon/Basic/5597.cpp
        Baekjoon/Basic/5622.cpp
        Baekjoon/BruteForce/7568.cpp
        Baekjoon/Basic/8958.cpp
        Baekjoon/Div&Mult/9020.cpp
        Baekjoon/DynamicProgramming/9184.cpp
        Baekjoon/MapNPair/9375.cpp
        Baekjoon/Div&Mult/9506.cpp
        Baekjoon/BackTracking/9663.cpp
        c++/14889.cpp
        Mathpromatica/365DaysOfMath/3_1.cpp Baekjoon/17103.cpp Baekjoon/17103.cpp Baekjoon/17103_v1.cpp Baekjoon/Div&Mult/17103_v3.cpp Baekjoon/DynamicProgramming/1904.cpp Baekjoon/11399.cpp Baekjoon/11399.cpp Baekjoon/DynamicProgramming/9461.cpp Baekjoon/DynamicProgramming/1912.cpp Baekjoon/DynamicProgramming/1912_single_loop.cpp "LeetCode/509_Fibonacci_Number.cpp" Baekjoon/Arithmetics/2355.cpp Baekjoon/GeometryBasics/27323.cpp Baekjoon/GeometryBasics/15894.cpp Baekjoon/GeometryBasics/9063.cpp Baekjoon/GeometryBasics/9063.cpp Baekjoon/GeometryBasics/10101.cpp Baekjoon/GeometryBasics/14215.cpp Baekjoon/Arithmetics/19532.cpp Baekjoon/DynamicProgramming/2579.cpp Baekjoon/DynamicProgramming/1463.cpp Baekjoon/BackTracking/9663.cpp Baekjoon/DynamicProgramming/1005.cpp)
